--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.9",
     "bootstrap": "^4.4.1",
+    "caniuse-lite": "^1.0.30001301",
     "graphql": "^16.2.0",
     "graphql-tag": "^2.12.6",
     "jwt-decode": "^2.2.0",
